<?xml version="1.0" encoding="utf-8"?>
<io.codetail.widget.RevealFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/search_view_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/faded_search_background"
        android:clickable="true"
        android:orientation="vertical"
        android:visibility="invisible">

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_minor"
            android:layout_marginRight="@dimen/spacing_minor"
            android:layout_marginTop="@dimen/spacing_minor"
            android:background="?BackgroundColorSecondary">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="?actionBarSize"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/up_button"
                    android:layout_width="56.0dip"
                    android:layout_height="56.0dip"
                    android:background="?selectableItemBackgroundBorderless"
                    android:contentDescription="@string/label_back"
                    android:src="@drawable/ic_action_arrow_back"
                    android:tint="?SearchTextColor" />

                <com.mari05lim.tandera.views.custom_views.TanderaEditText
                    android:id="@+id/search_edit"
                    style="@style/Widget.Tandera.TextAppearance.PrimaryText.Search"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:hint="@string/search_hint"
                    android:imeOptions="actionSearch"
                    android:inputType="textNoSuggestions" />

                <ImageButton
                    android:id="@+id/cancel_button"
                    android:layout_width="56.0dip"
                    android:layout_height="56.0dip"
                    android:layout_marginLeft="@dimen/spacing_major"
                    android:background="?selectableItemBackgroundBorderless"
                    android:contentDescription="@string/label_cancel"
                    android:src="@drawable/ic_action_cancel"
                    android:tint="?SearchTextColor" />
            </LinearLayout>

            <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
                android:id="@+id/smooth_progress_bar"
                style="@style/MaterialProgressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </FrameLayout>

        <com.marshalchen.ultimaterecyclerview.UltimateRecyclerView
            android:id="@+id/primary_recycler_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_micro" />
    </LinearLayout>
</io.codetail.widget.RevealFrameLayout>