<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/nomeTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:singleLine="true"
            tools:text="Réquiem para um Sonho"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/tda_white" />

        <TextView
            android:id="@+id/typeTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Filme"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <TextView
        android:id="@+id/streamFound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:text="@string/stream_found"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="?TextColorPrimary"
        android:visibility="visible" />

    <com.github.ybq.android.spinkit.SpinKitView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/spin_kit"
        style="@style/SpinKitView.Large.Circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        app:SpinKit_Color="@color/accent"
        android:visibility="gone" />

    <ListView
        android:id="@+id/listStream"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="130dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scaleType="centerInside"
            android:src="@drawable/cat_streaming_empty" />

        <com.mari05lim.tandera.views.custom_views.TanderaTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/empty_state_firstline"
            android:textColor="@color/primary_dark"
            android:textSize="20.0sp" />

        <com.mari05lim.tandera.views.custom_views.TanderaTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_margin="10dp"
            android:text="@string/empty_state_secondline"
            android:textColor="@color/primary"
            android:textSize="18.0sp" />

    </LinearLayout>

</RelativeLayout>